[tool.poetry]
name = "mediacrawler"
version = "0.1.0"
description = ""
authors = ["lujunjie16 <q15182574345@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "0.27.2"
Pillow = "9.5.0"
playwright = "1.46.0"
tenacity = "9.0.0"
aiomysql = "0.2.0"
redis = "5.0.8"
pydantic = "2.9.0"
aiofiles = "~23.2.1"
fastapi = "0.114.0"
uvicorn = "0.30.6"
python-dotenv = "1.0.1"
jieba = "0.42.1"
wordcloud = "1.9.3"
matplotlib = "3.9.0"
requests = "2.32.3"
parsel = "1.9.1"
pyexecjs = "1.5.1"
pandas = "^2.2.2"
opencv-python = "^4.10.0.84"
mysql-connector-python = "^9.0.0"
openpyxl = "^3.1.5"
openai = "^1.45.0"
aiohttp = "^3.10.5"
joblib = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
